<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/_constraintLayout_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        >

        <TextView
            android:id="@+id/name_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/temperament_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperament"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@id/name_detail"
            app:layout_constraintTop_toBottomOf="@id/name_detail"
            android:layout_marginVertical="8dp"/>

        <ImageButton
            android:id="@+id/favoriteButton_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="#00ffffff"
            android:src="@android:drawable/btn_star"
            app:layout_constraintBottom_toBottomOf="@id/name_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/name_detail" />

        <ImageView
            android:id="@+id/image_detail"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@mipmap/ic_launcher"

            app:layout_constraintTop_toBottomOf="@id/temperament_detail"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/descriptionTitle_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:text="@string/description_title"
            app:layout_constraintStart_toStartOf="@id/name_detail"
            app:layout_constraintTop_toBottomOf="@id/image_detail" />

        <TextView
            android:id="@+id/description_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/name_detail"
            app:layout_constraintTop_toBottomOf="@id/descriptionTitle_detail" />

        <TextView
            android:id="@+id/stats_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/stats"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="@+id/name_detail"
            app:layout_constraintTop_toBottomOf="@id/description_detail" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/stats_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/stats_detail_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>